--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@
 # Docs: https://redefine-docs.ohevan.com/basic/info
 info:
   # Site title
-  title: Theme Redefine
+  title: Wall of caution
   # Author name
-  author: The Redefine Team
+  author: 
   # Site URL
-  url: https://redefine.ohevan.com
+  url: 
 # BASIC INFORMATION <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
 
 
